Várias correções